<resources>
    <string name="app_name">Feels Like</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_myprofile">My Profile</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>

    <!-- Strings related to login & signup -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="action_sign_in">Sign In</string>
    <string name="login_greeting">Welcome back, %1$s!</string>
    <string name="invalid_email">Not an email address</string>
    <string name="invalid_password">Password must be >=6 characters</string>
    <string name="invalid_display_name">Display name must be >=2 characters</string>
    <string name="login_failed">Failed to login, try again later</string>
    <string name="login_invalid_credentials">Invalid email or password</string>
    <string name="feels_like_logo">Feels Like Logo</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="signup_link_text">Don\'t have an account? Sign Up</string>
    <string name="action_sign_up">Create Account</string>
    <string name="signup_greeting">Welcome, %1$s!</string>
    <string name="signup_failed">Failed to signup, try again later</string>
    <string name="signup_title">Welcome to Feels Like</string>
    <string name="signup_subtitle">Sign up to continue</string>
    <string name="signup_email_taken">Email already exists, choose another email</string>
    <string name="avatar_input">Choose your avatar</string>

    <!-- Strings related to profile -->
    <string name="logout_button_text">Logout</string>
    <string name="avatar_image">User avatar</string>
    <string name="edit_button_text">Edit</string>
    <string name="prompt_edit_name">Edit Name</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="edit_avatar">Edit Avatar</string>
    <string name="profile_edit_succeeded">Profile updated successfully</string>
    <string name="update_profile_failed">Failed to update profile</string>

    <string name="fab_create_post">Create Post</string>
    <string name="how_does_it_feel_today">How does it feel today?</string>
    <string name="upload_post">Upload Post</string>
    <string name="cancel">Cancel</string>

    <!-- Weather related strings -->
    <string name="unable_to_get_weather">Unable to get weather information</string>
    <string name="using_estimated_data">Using estimated weather data</string>
    <string name="temperature">%1$d°C</string>
    <string name="weather_description">%1$d°C, %2$s</string>
    <string name="location">%1$s, %2$s</string>
</resources>
