<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.myprofile.MyProfileFragment">

    <ImageView
        android:id="@+id/avatar_image_view"
        style="@style/FeelsLike.Image.Avatar"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/avatar_image"
        android:src="@drawable/icon_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_name_text_view"
        style="@style/FeelsLike.Text.Headline.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_image_view"
        tools:text="Jane Doe" />

    <TextView
        android:id="@+id/email_text_view"
        style="@style/FeelsLike.Text.Body.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display_name_text_view"
        tools:ignore="TextContrastCheck"
        tools:text="jane@example.com" />

    <Button
        android:id="@+id/logout_button"
        style="@style/FeelsLike.Button.TextIcon"
        android:text="@string/logout_button_text"
        app:icon="@drawable/icon_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/edit_button"
        style="@style/FeelsLike.Button.TextIcon"
        android:text="@string/edit_button_text"
        app:icon="@drawable/icon_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/my_posts_title"
        style="@style/FeelsLike.Text.Headline.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="My Posts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_posts_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_posts_title"
        tools:listitem="@layout/item_post" />

    <TextView
        android:id="@+id/no_posts_text_view"
        style="@style/FeelsLike.Text.Body.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You haven't created any posts yet."
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_posts_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
